src/theme/_variables.scss
@use 'sass:map';

// breakpoints
$breakpoints: (
  sm: 640px,
  md: 768px,
  lg: 1024px,
  xl: 1280px,
  xxl: 1536px,
);

/* ==UI-THEME-VARS:START== */
:root {
  --background: oklch(0.994 0 0);
  --foreground: oklch(0 0 0);

  --card: oklch(0.994 0 0);
  --card-foreground: oklch(0 0 0);

  --popover: oklch(0.97 0.0029 264.542);
  --popover-foreground: oklch(0 0 0);

  --primary: oklch(0.5393 0.2713 286.7462);
  --primary-foreground: oklch(1 0 0);

  --secondary: oklch(0.954 0.0063 255.4755);
  --secondary-foreground: oklch(0.1344 0 0);

  --muted: oklch(0.9702 0 0);
  --muted-foreground: oklch(0.4386 0 0);

  --accent: oklch(0.9487 0.0058 264.5319);
  --accent-foreground: oklch(0 0 0);

  --destructive: oklch(0.577 0.245 27.325);
  --destructive-foreground: oklch(1 0 0);

  --border: oklch(0.93 0.0094 286.2156);
  --input: oklch(0.9401 0 0);
  --ring: oklch(0 0 0);

  --sidebar: oklch(0.97 0.0029 264.542);
  --sidebar-foreground: oklch(0 0 0);
  --sidebar-primary: oklch(0 0 0);
  --sidebar-primary-foreground: oklch(1 0 0);
  --sidebar-accent: oklch(0.9401 0 0);
  --sidebar-accent-foreground: oklch(0 0 0);
  --sidebar-border: oklch(0.9401 0 0);
  --sidebar-ring: oklch(0 0 0);

  --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
  --shadow-xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
  --shadow-sm: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
  --shadow: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
  --shadow-md: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 2px 4px -1px hsl(0 0% 0% / 0.16);
  --shadow-lg: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 4px 6px -1px hsl(0 0% 0% / 0.16);
  --shadow-xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 8px 10px -1px hsl(0 0% 0% / 0.16);
  --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.4);

  --tracking-normal: -0.025em;
  --spacing: 0.27rem;

  --radius: 0.875rem;
}

.dark {
  --background: oklch(0.2329 0.014 304.7344);
  --foreground: oklch(0.9938 0.0013 106.4231);

  --card: oklch(0.323 0.0129 305.0055);
  --card-foreground: oklch(0.9872 0.0034 325.6024);

  --popover: oklch(0.2172 0.0117 293.0436);
  --popover-foreground: oklch(0.9551 0 0);

  --primary: oklch(0.4039 0.1475 287.6846);
  --primary-foreground: oklch(1 0 0);

  --secondary: oklch(0.294 0.013 272.9312);
  --secondary-foreground: oklch(0.9551 0 0);

  --muted: oklch(0.294 0.013 272.9312);
  --muted-foreground: oklch(0.7058 0 0);

  --accent: oklch(0.284 0.0091 294.9832);
  --accent-foreground: oklch(0.852 0.0027 286.3415);

  --destructive: oklch(0.704 0.191 22.216);
  --destructive-foreground: oklch(1 0 0);

  --border: oklch(0.3343 0.0111 308.0912);
  --input: oklch(0.3343 0.0111 308.0912);
  --ring: oklch(0.6132 0.2294 291.7437);

  --sidebar: oklch(0.2172 0.0117 293.0436);
  --sidebar-foreground: oklch(0.9864 0.0028 308.429);
  --sidebar-primary: oklch(0.284 0.0091 294.9832);
  --sidebar-primary-foreground: oklch(1 0 0);
  --sidebar-accent: oklch(0.284 0.0091 294.9832);
  --sidebar-accent-foreground: oklch(0.9842 0.0034 325.6025);
  --sidebar-border: oklch(0.3289 0.0092 268.3843);
  --sidebar-ring: oklch(0.6132 0.2294 291.7437);

  --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
  --shadow-xs: 0px 2px 3px 0px hsl(0 0% 0% / 0.08);
  --shadow-sm: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
  --shadow: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 1px 2px -1px hsl(0 0% 0% / 0.16);
  --shadow-md: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 2px 4px -1px hsl(0 0% 0% / 0.16);
  --shadow-lg: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 4px 6px -1px hsl(0 0% 0% / 0.16);
  --shadow-xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.16), 0px 8px 10px -1px hsl(0 0% 0% / 0.16);
  --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 0% / 0.4);
}
/* ==UI-THEME-VARS:END== */

// Color variables for success, warning, and info states
:root {
  --success: oklch(0.7459 0.1483 156.4499);
  --warning: oklch(0.7336 0.1758 50.5517);
  --info: oklch(0.5828 0.1809 259.7276);
}

.dark {
  --success: oklch(0.8003 0.1821 151.711);
  --warning: oklch(0.7336 0.1758 50.5517);
  --info: oklch(0.6691 0.1569 260.1063);
}

:root {
  font-size: 15px;

  /* radius */
  --radius-xs: calc(var(--radius) - 8px);
  --radius-sm: calc(var(--radius) - 6px);
  --radius-md: calc(var(--radius) - 4px);
  --radius-lg: calc(var(--radius) - 2px);
  --radius-xl: var(--radius);
  --radius-2xl: calc(var(--radius) + 4px);
  --radius-3xl: calc(var(--radius) + 8px);

  /* misc */
  --sidebar-width: 260px;
  --blur: 10px;

  --color-base: var(--background);
  --color-coollabs: var(--primary);
  --color-text-primary: var(--foreground);

  --color-error: var(--destructive);
  --color-success: var(--success);
  --color-warning: var(--warning);
  --color-info: var(--info);
}

